--- a/components/sty292kfy-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/sty292kfy-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: sty292kfy-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-65d92774e0.a3a4.p3.openshiftapps.com/rhtap/rhtap-qe:b9eab46ba2acc28a407c5f1cb7a0fddbe7583549@sha256:4c38586d0f444cbdaca11aac7a210448bc106340320708e836fd66ca67423c0f
+          name: container-image
